<resources>
    <string name="app_name">Car_Rental</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Car Rental</string>
    <string name="login">Login</string>
    <string name="not_registered_register_now">Not Registered? Register Now!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="id_card_number">Identity card number</string>
    <string name="choose_vehicle_type">Choose vehicle type</string>
    <string name="small_car">Small Car</string>
    <string name="_4_5_door">4/5 Door</string>
    <string name="suv">SUV</string>
    <string name="minivan">Minivan</string>
    <string name="bus">Bus</string>
    <string name="big_bus">Big Bus</string>
    <string name="add_new_driver">Add new driver</string>
    <string name="driver_name">Driver name</string>
    <string name="identity_card_number">Identity card number</string>
    <string name="driving_licence_number">Driving licence number</string>
    <string name="add_new_vehicle">Add new vehicle</string>
    <string name="enter_car_manufacturer">Enter car manufacturer...</string>
    <string name="choose_image">Choose image</string>
    <string name="car_image">Car image</string>
    <string name="edit_or_delete">Edit or Delete</string>
    <string name="driver_name_">Driver name:</string>
    <string name="id_card_number_">ID card number:</string>
    <string name="id_card_numbe">ID card number</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_">Phone number:</string>
    <string name="driving_licence_">Driving licence:</string>
    <string name="driving_licence">Driving licence</string>
    <string name="address_">Address:</string>
    <string name="address">Address</string>
    <string name="not_available">Not available</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="manufacturer_">Manufacturer:</string>
    <string name="model_">Model:</string>
    <string name="available_">Available:</string>
    <string name="available">Available</string>
    <string name="selected_car">Selected Car</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="price_">Price:</string>
    <string name="price">Price</string>
    <string name="euro">€</string>
    <string name="equipment_">Equipment:</string>
    <string name="equipment">Equipment</string>
    <string name="check_if_you_want_personal_driver">Check if you want personal driver</string>
    <string name="pick_rental_start_time">Pick rental start time</string>
    <string name="pick_rental_finish_time">Pick rental finish time</string>
    <string name="rent">Rent</string>
    <string name="registration_page">Registration page</string>
    <string name="name_">Name:</string>
    <string name="id_card_number__">ID card number</string>
    <string name="carimage">carImage</string>
    <string name="admin_page">Admin Page</string>
    <string name="choose_option">Choose option:</string>
    <string name="show_selected">Show selected</string>
    <string name="add_new_car">Add new car</string>
    <string name="add_new_driver">Add new driver</string>
    <string name="show_drivers">Show drivers</string>
    <string-array name="cartypes">
        <item>All</item>
        <item>Small car</item>
        <item>4/5 door car</item>
        <item>SUV</item>
        <item>Minivan</item>
        <item>Bus</item>
        <item>Big bus</item>
    </string-array>
    <string-array name="cartypes2">
        <item>Small car</item>
        <item>4/5 door car</item>
        <item>SUV</item>
        <item>Minivan</item>
        <item>Bus</item>
        <item>Big bus</item>
    </string-array>
</resources>