<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.adminside.AdminFragment">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:gravity="center"
        android:text="@string/admin_page"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/carlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:gravity="center"
        android:text="@string/choose_option"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp" />

    <Button
        android:id="@+id/btn_show"
        android:layout_width="235sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:backgroundTint="#014ADD"
        android:text="@string/show_selected"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add_car"
        android:layout_width="235sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:backgroundTint="#014ADD"
        android:text="@string/add_new_car"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add_driver"
        android:layout_width="235sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:backgroundTint="#014ADD"
        android:text="@string/add_new_driver"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_show_drivers"
        android:layout_width="235sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:backgroundTint="#014ADD"
        android:text="@string/show_drivers"
        android:textStyle="bold" />

</LinearLayout>