<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddDriverFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:text="@string/add_new_driver"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_driver_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40sp"
                android:autofillHints="Name..."
                android:hint="Name"
                android:inputType="textPersonName"
                android:minWidth="250sp"
                android:minHeight="50sp" />

            <EditText
                android:id="@+id/et_driver_id_card_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:autofillHints="ID card number..."
                android:hint="@string/id_card_number"
                android:inputType="textPersonName"
                android:minWidth="250sp"
                android:minHeight="50sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/et_drivers_driving_licence_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:autofillHints="Driving licence number..."
                android:hint="@string/driving_licence_number"
                android:inputType="textPersonName"
                android:minWidth="250sp"
                android:minHeight="50sp" />

            <EditText
                android:id="@+id/et_driver_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:autofillHints="Phone number..."
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:minWidth="250sp"
                android:minHeight="50sp" />

            <EditText
                android:id="@+id/et_drivers_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:autofillHints="Address..."
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:minWidth="250sp"
                android:minHeight="50sp" />

            <Switch
                android:id="@+id/sw_availability_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:minHeight="48dp"
                android:text="Availability"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/btn_save_driver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:text="@string/save"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>